fixing horizontal scroll content cut off issue

--- a/portfolio/mystyles.css
+++ b/portfolio/mystyles.css
@@ -272,17 +272,19 @@ p {
   align-items: center;
 }
 
+.horizontalScrollContainer {
+  overflow-x: auto;
+  scroll-padding-right: 20px;
+  width: 85%;
+}
+
 .projectContainer {
   padding: 20px;
-  width: 85%;
+  width: 2100px;
   display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-  background-color: rosybrown;
 }
 
 .projectCard {
-  white-space: normal;
   display: flex;
   margin: 15px 15px;
   padding: 0px;
@@ -293,6 +295,10 @@ p {
   border-radius: 10px;
   width: 300px;
   box-shadow: 0px 0px 10px #17252a;
+}
+
+.projectCard:last-child {
+  margin-right: 50px;
 }
 
 .projectCard h2 {
